--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   "main": "./src/select2.js",
   "dependencies": {
     "angular": ">=1.0.2 <1.2",
-    "select2": "~3.4",
+    "select2": "https://github.com/dmitry-dedukhin/select2/archive/asd_tech.zip",
     "jquery": ">=1.6.4"
   },
   "devDependencies": {
